CAD-2194: email notifications, WIP

--- a/cardano-rt-view.cabal
+++ b/cardano-rt-view.cabal
@@ -25,6 +25,7 @@ library
                        Cardano.RTView.GUI.Elements
                        Cardano.RTView.GUI.JS.Charts
                        Cardano.RTView.GUI.JS.Utils
+                       Cardano.RTView.GUI.Markup.Notifications
                        Cardano.RTView.GUI.Markup.OwnInfo
                        Cardano.RTView.GUI.Markup.PageBody
                        Cardano.RTView.GUI.Markup.Pane
